...
                            fontWeight = FontWeight.Medium
                        ),
                    )
                },
                navigationIcon = {
                    IconButton(
                        onClick = { onBack() }, modifier = Modifier.testTag("akatsuki_back"),
                    ) {
                        Icon(Icons.AutoMirrored.Rounded.ArrowBack, contentDescription = null)
                    }
                },
                colors = TopAppBarDefaults.largeTopAppBarColors(
                    containerColor = MaterialTheme.colorScheme.background
...

                LazyVerticalGrid(
                    columns = GridCells.Fixed(columns),
                    horizontalArrangement = Arrangement.spacedBy(12.dp),
                    verticalArrangement = Arrangement.spacedBy(12.dp),
                    contentPadding = PaddingValues(20.dp),
                    modifier = Modifier.testTag("akatsuki_col")
                ) {
                    items(items = uiState, key = {it.id}){ data ->
                        KaraItem(
                            onClick = { onClick(data.id) },
                            name = data.name,
                            jutsu = data.jutsu,
...
