...
                        ),
                    )
                },
                navigationIcon = {
                    IconButton(
                        onClick = { event(ClanViewStateEvent.Event.GotoHomeEvent) },
                        modifier = Modifier.testTag("clan_back"),
                    ) {
                        Icon(Icons.AutoMirrored.Rounded.ArrowBack, contentDescription = null)
                    }
                },
                colors = TopAppBarDefaults.largeTopAppBarColors(
                    containerColor = MaterialTheme.colorScheme.background
...
                LazyVerticalGrid(
                    columns = GridCells.Fixed(columns),
                    horizontalArrangement = Arrangement.spacedBy(12.dp),
                    verticalArrangement = Arrangement.spacedBy(12.dp),
                    contentPadding = PaddingValues(20.dp),
                    modifier = Modifier
                        .testTag("clan_col")
                ) {
                    items(items = uiState, key = {it.id}){ data ->
                        ClanContentItem(
                            modifier = Modifier.testTag(data.id),
                            clanModel = data
                        )
...
