...
    images: LazyPagingItems<CharacterModel>,
    onImageClick: (String) -> Unit,
    onImageDragStart: (CharacterModel?) -> Unit,
    onImageDragEnd: () -> Unit,
) {
    LazyVerticalStaggeredGrid(
        modifier = modifier.testTag("character_col"),
        columns = StaggeredGridCells.Adaptive(120.dp),
        contentPadding = PaddingValues(10.dp),
        verticalItemSpacing = 10.dp,
        horizontalArrangement = Arrangement.spacedBy(10.dp)
    ) {
        items(count = images.itemCount, key = {it}) { index ->
...
